feat: add user logout option
